More refactoring, to better incorporate use cases.
Moved the close ideas out of the main library, because they need a lot more thought before implementing, which may be a ways off.