@@ -1,13 +1,13 @@
 // Released under the MIT License.
 package net.groboclown.retval;
 
+import java.util.Arrays;
 import java.util.List;
-import net.groboclown.retval.Problem;
-import net.groboclown.retval.Ret;
 import net.groboclown.retval.problems.LocalizedProblem;
 import org.junit.jupiter.api.Test;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
 
 
 /**
@@ -50,7 +50,7 @@ class RetTest {
         final Problem p2 = LocalizedProblem.from("p2");
         assertEquals(
                 List.of(p1, p2),
-                Ret.joinProblemSets(List.of(p1, p2))
+                Ret.joinProblemSets(Arrays.asList(p1, null, p2))
         );
         assertEquals(
                 List.of(p1, p2),
@@ -59,7 +59,7 @@ class RetTest {
         // Ordering...
         assertEquals(
                 List.of(p2, p1),
-                Ret.joinProblemSets(List.of(p2), List.of(p1))
+                Ret.joinProblemSets(List.of(p2), Arrays.asList(null, p1))
         );
     }
 
@@ -89,6 +89,20 @@ class RetTest {
                         LocalizedProblem.from("p1"),
                         LocalizedProblem.from("p2")
                 ))
+        );
+    }
+
+    @Test
+    void joinRetProblemSets_nullInContainer() {
+        final LocalizedProblem problem = LocalizedProblem.from("p1");
+        final TestableProblemContainer container
+                = new TestableProblemContainer(null, problem, null);
+        assertEquals(
+                List.of(problem, problem),
+                Ret.joinRetProblemSets(
+                        Arrays.asList(container, null),
+                        Arrays.asList(null, container)
+                )
         );
     }
 }
